--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "css-loader": "^3.4.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -35,7 +35,8 @@
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
