--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel": "^6.5.2",
+    "node": "^10.24.1",
     "prop-types": "^15.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
